--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,185 @@
-.App {
-  text-align: center;
-}
+/* TO DO LIST */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.todo-outter{
   min-height: 100vh;
+  padding: 20px 0;
+  background: #eeeeee;
+  position: relative;
+}
+
+.todo-outter:before{
+  content: "TO DO LIST";
+  font-size: 12vw;
+  font-weight: 900;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #000;
+  opacity: 0.3;
+}
+
+.todo-list-app{
+  padding: 20px;
+  margin: auto;
+  border-radius: 10px;
+  background-color: lightblue;
+  width: 500px;
+  position: relative;
+  left: 0;
+  right: 0;
+}
+
+.form-input{
+  width: 80%;
+  background-color: #f1ffc7;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.form-button{
+  padding: 10px;
+  float: right;
+  background-color: #f1ffc7;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.item{
+  width: 80%;
+  background-color: #ffd1b5;
+  border: 1px solid #969696;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.completed{
+  width: 80%;
+  background-color: #cfffb8;
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.item-button{
+  padding: 2px;
+  float: right;
+  background: none;
+  border: none;
+  margin-left: 5px;
+}
+
+
+
+/* HANGMAN */
+
+.hangman-app{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  flex-direction: column;
+  min-height: 100vh;
+  background: #dddddd;
+  position: relative;
+}
+
+.hangman-app:before{
+  content: "HANGMAN";
+  font-size: 12vw;
+  font-weight: 900;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #000;
+  opacity: 0.3;
+}
+
+.alert{
+  margin-top: 40px;
+}
+
+.container{
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.hangman-app button{
+  padding: 10px;
+  margin: 10px;
+  border: none;
+  border-radius: 7px;
+  background: rgb(95, 84, 83);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.image{
+  margin: 20px;
+  height: 150px;
+  width: 150px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.missed{
+  font-weight: bold;
+}
+
+.horizontal{
+  transform: rotate(-90deg);
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+
+
+/* TIC TAC TOE */
+
+.tictactoe-outter{
+  min-height: 100vh;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #eeeeee;
+  position: relative;
+}
+
+.tictactoe-outter:before{
+  content: "TIC TAC TOE";
+  font-size: 12vw;
+  font-weight: 900;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #000;
+  opacity: 0.3;
+}
+
+.field{
+  width: 100%;
+  height: 60px;
+  background-color: #d4d4d4;
+  color: #000;
+  font-weight: 900;
+  border: none;
+  outline: none;
+}
+
+.board{
+  width: 200px;
+  height: 200px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+}
+
+.info-text{
+  font-size: 24px;
 }
